// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DbStore Edit Test: After create and geteditorig 1`] = `
Object {
  "createState": Object {
    "formModel": Object {
      "guestName": "myText",
      "id": 0,
      "myVal": 420,
    },
  },
  "currentlyEditing": 0,
  "fetching": Object {},
  "getFromServer": [Function],
  "getState": Object {
    "simpleTestCol": Object {
      "0": Object {
        "guestName": "myText",
        "id": 0,
        "myVal": 420,
      },
    },
    "users": Object {
      "0": Object {
        "email": "user",
        "id": 0,
      },
    },
  },
  "lastFetch": Object {},
  "removeState": Object {},
  "updateState": Object {
    "undefined0": null,
  },
}
`;

exports[`DbStore Edit Test: Before submit patch 1`] = `
Object {
  "createState": Object {
    "formModel": Object {
      "guestName": "myText",
      "id": 0,
      "myVal": 420,
    },
  },
  "currentlyEditing": 0,
  "fetching": Object {},
  "getFromServer": [Function],
  "getState": Object {
    "simpleTestCol": Object {
      "0": Object {
        "guestName": "myText",
        "id": 0,
        "myVal": 420,
      },
    },
    "users": Object {
      "0": Object {
        "email": "user",
        "id": 0,
      },
    },
  },
  "lastFetch": Object {},
  "removeState": Object {},
  "updateState": Object {
    "undefined0": null,
  },
}
`;

exports[`DbStore Edit Test: Before submit patch 2`] = `
Object {
  "errors": Object {},
  "formData": Object {
    "authForm": undefined,
    "formModel": Object {
      "guestName": "changed",
      "id": 0,
      "myVal": 240,
    },
  },
  "loading": Object {
    "formModel": false,
  },
}
`;

exports[`DbStore Edit Test: after create 1`] = `
<div>
  {
  "original": {
    "guestName": "myText",
    "myVal": 420,
    "id": 0
  },
  "user": {
    "email": "user",
    "id": 0
  }
}
</div>
`;

exports[`DbStore Edit Test: after edit getorig 1`] = `
Object {
  "errors": Object {},
  "formData": Object {
    "authForm": undefined,
    "formModel": Object {
      "guestName": "myText",
      "id": 0,
      "myVal": 420,
    },
  },
  "loading": Object {
    "formModel": false,
  },
}
`;

exports[`DbStore Edit Test: after purposely set invalid err 1`] = `
<div>
  {
  "error": {
    "got": "err"
  },
  "state": {
    "guestName": "changed",
    "myVal": 240,
    "id": 0
  },
  "loading": false,
  "original": {
    "guestName": "changed",
    "myVal": 240,
    "id": 0
  },
  "user": {
    "email": "user",
    "id": 0
  }
}
</div>
`;

exports[`DbStore Edit Test: after submitted patch 1`] = `
Object {
  "createState": Object {
    "formModel": Object {
      "guestName": "myText",
      "id": 0,
      "myVal": 420,
    },
  },
  "currentlyEditing": 0,
  "fetching": Object {},
  "getFromServer": [Function],
  "getState": Object {
    "simpleTestCol": Object {
      "0": Object {
        "guestName": "changed",
        "id": 0,
        "myVal": 240,
      },
    },
    "users": Object {
      "0": Object {
        "email": "user",
        "id": 0,
      },
    },
  },
  "lastFetch": Object {},
  "removeState": Object {},
  "updateState": Object {
    "formModel0": Object {
      "guestName": "changed",
      "id": 0,
      "myVal": 240,
    },
    "undefined0": null,
  },
}
`;

exports[`DbStore Edit Test: after successfull save 1`] = `
<div>
  {
  "error": null,
  "state": {
    "guestName": "changed",
    "myVal": 240,
    "id": 0
  },
  "loading": false,
  "original": {
    "guestName": "changed",
    "myVal": 240,
    "id": 0
  },
  "user": {
    "email": "user",
    "id": 0
  }
}
</div>
`;

exports[`DbStore Edit Test: before set by getorig 1`] = `
Object {
  "errors": Object {},
  "formData": Object {
    "authForm": undefined,
    "formModel": undefined,
  },
  "loading": Object {
    "formModel": false,
  },
}
`;

exports[`DbStore Edit Test: hidden in update 1`] = `
<div>
  {
  "error": {
    "got": "err"
  },
  "state": null,
  "loading": false,
  "original": {
    "guestName": "changed",
    "myVal": 240,
    "id": 0
  },
  "user": {
    "email": "user",
    "id": 0
  }
}
</div>
`;

exports[`DbStore Edit Test: hidden text 1`] = `
<div>
  {
  "error": {
    "got": "err"
  },
  "state": {
    "guestName": "changed",
    "myVal": 240,
    "id": 0
  },
  "loading": false,
  "user": {
    "email": "user",
    "id": 0
  }
}
</div>
`;

exports[`DbStore Edit Test: not hidden in update 1`] = `
<div>
  {
  "error": {
    "got": "err"
  },
  "state": null,
  "loading": false,
  "original": {
    "guestName": "changed",
    "myVal": 240,
    "id": 0
  },
  "user": {
    "email": "user",
    "id": 0
  }
}
</div>
`;

exports[`DbStore Edit Test: prefix After create and geteditorig 1`] = `
Object {
  "createState": Object {
    "formModel": Object {
      "guestName": "secondOBJ",
      "id": 1,
      "myVal": 24,
    },
  },
  "currentlyEditing": 1,
  "fetching": Object {
    "0": false,
  },
  "getFromServer": [Function],
  "getState": Object {
    "simpleTestCol": Object {
      "0": Object {
        "guestName": "changed",
        "id": 0,
        "myVal": 240,
      },
      "1": Object {
        "guestName": "secondOBJ",
        "id": 1,
        "myVal": 24,
      },
    },
  },
  "lastFetch": Object {
    "0": 1304605243337,
  },
  "removeState": Object {},
  "updateState": Object {
    "formModel": undefined,
    "formModel0": Object {
      "guestName": "changed",
      "id": 0,
      "myVal": 240,
    },
    "undefined0": null,
    "undefined1": null,
  },
}
`;

exports[`DbStore Edit Test: prefix Before submit patch 1`] = `
Object {
  "createState": Object {
    "formModel": Object {
      "guestName": "secondOBJ",
      "id": 1,
      "myVal": 24,
    },
  },
  "currentlyEditing": 1,
  "fetching": Object {
    "0": false,
  },
  "getFromServer": [Function],
  "getState": Object {
    "simpleTestCol": Object {
      "0": Object {
        "guestName": "changed",
        "id": 0,
        "myVal": 240,
      },
      "1": Object {
        "guestName": "secondOBJ",
        "id": 1,
        "myVal": 24,
      },
    },
  },
  "lastFetch": Object {
    "0": 1304605243337,
  },
  "removeState": Object {},
  "updateState": Object {
    "formModel": undefined,
    "formModel0": Object {
      "guestName": "changed",
      "id": 0,
      "myVal": 240,
    },
    "undefined0": null,
    "undefined1": null,
  },
}
`;

exports[`DbStore Edit Test: prefix after create 1`] = `
<div>
  {
  "original": {
    "guestName": "secondOBJ",
    "myVal": 24,
    "id": 1
  },
  "user": {
    "email": "user",
    "id": 0
  }
}
</div>
`;

exports[`DbStore Edit Test: prefix after edit getorig 1`] = `
Object {
  "errors": Object {
    "0": undefined,
    "formModel0": Object {
      "got": "err",
    },
  },
  "formData": Object {
    "authForm": undefined,
    "formModel": Object {
      "guestName": "secondOBJ",
      "id": 1,
      "myVal": 24,
    },
  },
  "loading": Object {
    "0": false,
    "formModel": false,
    "formModel0": false,
  },
}
`;

exports[`DbStore Edit Test: prefix after purposely set invalid err 1`] = `
<div>
  {
  "error": {
    "got": "err"
  },
  "state": {
    "guestName": "secondOBJ",
    "myVal": 24,
    "id": 1
  },
  "loading": false,
  "original": {
    "guestName": "secondOBJ",
    "myVal": 24,
    "id": 1
  },
  "user": {
    "email": "user",
    "id": 0
  }
}
</div>
`;

exports[`DbStore Edit Test: prefix after submitted patch 1`] = `
Object {
  "createState": Object {
    "formModel": Object {
      "guestName": "secondOBJ",
      "id": 1,
      "myVal": 24,
    },
  },
  "currentlyEditing": 1,
  "fetching": Object {
    "0": false,
  },
  "getFromServer": [Function],
  "getState": Object {
    "simpleTestCol": Object {
      "0": Object {
        "guestName": "changed",
        "id": 0,
        "myVal": 240,
      },
      "1": Object {
        "guestName": "secondOBJ",
        "id": 1,
        "myVal": 24,
      },
    },
  },
  "lastFetch": Object {
    "0": 1304605243337,
  },
  "removeState": Object {},
  "updateState": Object {
    "editPrefix.formModel1": Object {
      "guestName": "secondOBJ",
      "id": 1,
      "myVal": 24,
    },
    "formModel": undefined,
    "formModel0": Object {
      "guestName": "changed",
      "id": 0,
      "myVal": 240,
    },
    "undefined0": null,
    "undefined1": null,
  },
}
`;

exports[`DbStore Edit Test: prefix after successfull save 1`] = `
<div>
  {
  "error": null,
  "state": {
    "guestName": "secondOBJ",
    "myVal": 24,
    "id": 1
  },
  "loading": false,
  "original": {
    "guestName": "secondOBJ",
    "myVal": 24,
    "id": 1
  },
  "user": {
    "email": "user",
    "id": 0
  }
}
</div>
`;

exports[`DbStore Edit Test: prefix before set by getorig 1`] = `
Object {
  "errors": Object {
    "0": undefined,
    "formModel0": Object {
      "got": "err",
    },
  },
  "formData": Object {
    "authForm": undefined,
    "formModel": undefined,
  },
  "loading": Object {
    "0": false,
    "formModel": false,
    "formModel0": false,
  },
}
`;

exports[`DbStore Edit Test: prefix result of edit fetch 1`] = `undefined`;

exports[`DbStore Edit Test: prefix updated record 1`] = `
Object {
  "guestName": "secondOBJ",
  "id": 1,
  "myVal": 24,
}
`;

exports[`DbStore Edit Test: prefix while loading 1`] = `
<div>
  {
  "error": {
    "got": "err"
  },
  "state": {
    "guestName": "secondOBJ",
    "myVal": 24,
    "id": 1
  },
  "loading": true,
  "original": {
    "guestName": "secondOBJ",
    "myVal": 24,
    "id": 1
  },
  "user": {
    "email": "user",
    "id": 0
  }
}
</div>
`;

exports[`DbStore Edit Test: resetOnMount 1`] = `
<div>
  {
  "error": {
    "got": "err"
  },
  "state": null,
  "loading": false,
  "original": {
    "guestName": "changed",
    "myVal": 240,
    "id": 0
  },
  "user": {
    "email": "user",
    "id": 0
  }
}
</div>
`;

exports[`DbStore Edit Test: result of edit fetch 1`] = `undefined`;

exports[`DbStore Edit Test: updated record 1`] = `
Object {
  "guestName": "changed",
  "id": 0,
  "myVal": 240,
}
`;

exports[`DbStore Edit Test: while loading 1`] = `
<div>
  {
  "error": {
    "got": "err"
  },
  "state": {
    "guestName": "changed",
    "myVal": 240,
    "id": 0
  },
  "loading": true,
  "original": {
    "guestName": "changed",
    "myVal": 240,
    "id": 0
  },
  "user": {
    "email": "user",
    "id": 0
  }
}
</div>
`;
